2004-11-02  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/association.py: added name and made a start with
	direction.
	* gaphor/ui/mainactions.py: confirmation dialog when starting a new
	model.

2004-10-29  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/feature.py: fixed bug that didn't render attributes
	when they have to.
	* gaphor/diagram/__init__.py: make register_item accept more default
	classes. (fixes DND of Stereotype item).
	* gaphor/diagram/diagramitem.py: bug fix: UML elements were no longer
	removed when all presentations were removed.
	* gaphor/UML/uml2.gaphor: added Classifier.appliedStereotype (in stead
	of Class.appliedStereotype).
	* gaphor/storage.py: made conversion from ClassItem to InterfaceItem
	for pre-0.6.2 classes
	* setup.py: bump version to 0.6.2 to ensure the conversion works.

2004-10-26  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/classifier.py: new class. Generic subclass for
	Class, Interface, Component, Actor, etc.
	* gaphor/diagram/actor.py: made subclass of ClassifierItem.
	* gaphor/diagram/klass.py: made subclass of ClassifierItem.
	* gaphor/diagram/interface.py: made subclass of ClassItem.
	* gaphor/diagram/itemactions.py: Made changes to Fold/Unfold actions.

2004-10-23  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/UML/properties/py: refactored association code. made
	undo/redo really work.
	* gaphor/diagram/itemactions.py: made lots of actions undo-aware.
	* As of here, Gaphor has one application wide undo manager (no longer
	one per diagram).
	* setup.py: bumped version to 0.6.1.
	
2004-10-22  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/diagramitem.py: do no longer automatically unlink
	in diagramassociation. unlink in DiagramItem.unlink() instead.

2004-10-15  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/association.py: arrow heads were drawn in the wrong
	direction. corrected
	* gaphor/*: got complete rid of the __relink__ signal.