@@ -1,3 +1,7 @@
+2004-11-03  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
+
+	* gaphor/diagram/association.py: added direction arrow.
+
 2004-11-02  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
 
 	* gaphor/diagram/association.py: added name and made a start with
